# BignessLeague-DiscordBot

./: .env.development  .env.example  .env.production  .gitignore  .importlinter  AGENTS.md  README.md  pyproject.toml  qodana.yaml
aa_deploy/: README.md  bigness-league.service
aa_resources/locales/: en-US.json  es-ES.json
aa_resources/ticket_ai/: knowledge_base.json  knowledge_base_v0.json  system_prompt.txt
aa_scripts/i18n/: generate_i18n_keys.py
src/bigness_league_bot/: __init__.py  bot.py  config.py  main.py
src/bigness_league_bot/aa_external/locales/: es-ES.json
src/bigness_league_bot/app/: __init__.py  bootstrap.py  logging.py  single_instance.py
src/bigness_league_bot/application/: __init__.py
src/bigness_league_bot/application/services/: __init__.py  channel_closure.py  match_channel_creation.py  match_replay_groups.py  match_replay_models.py  match_replay_roster_resolution.py  match_replay_summaries.py  match_replay_team_names.py  match_replays.py  match_schedules.py  match_standings.py  mmr_media.py  pending_team_signing_assignments.py  team_profile.py  team_signing.py  team_signing_guide.py  team_signing_models.py  team_signing_player_parser.py  team_signing_staff_parser.py  team_signing_template.py  text_tools.py  ticket_ai.py  ticket_categories.py  ticket_formatting.py  ticket_message_links.py  ticket_payload.py  (+1 more)
src/bigness_league_bot/core/: __init__.py  errors.py  localization.py  settings.py  timezones.py
src/bigness_league_bot/infrastructure/: __init__.py
src/bigness_league_bot/presentation/: __init__.py
tests/: test_match_replays.py
(+134 files in other folders)
